--- a/app/views/wechat/users/edit.html.erb
+++ b/app/views/wechat/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div id="userEditPage" class="page page-current">
   <header class="bar bar-nav">
-    <a class="icon icon-left pull-left back" href="<%= wechat_root_path %>"></a>
+    <a class="icon icon-left pull-left external" href="<%= wechat_root_path %>"></a>
     <button class="button button-link button-nav pull-right external" onclick="$('#userInfoForm').submit();">
       保存&nbsp;&nbsp;&nbsp;
     </button>
