--- a/app/views/layouts/wechat.html.erb
+++ b/app/views/layouts/wechat.html.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title><%= wechat_title %></title>
-  <!-- <meta name="viewport" content="initial-scale=1, maximum-scale=1"> -->
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -12,17 +12,13 @@
   <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
   <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
   <%= stylesheet_link_tag    'wechat', media: 'all' %>
+  <script type='text/javascript' src='http://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
   <%= csrf_meta_tags %>
 </head>
   <body ontouchstart class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %>">
-      <div class="page-group">
-        
-          <%= yield %>
-        </div>
-      </div>
-
-
-    <script type='text/javascript' src='http://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+    <div class="page-group">
+      <%= yield %>
+    </div>
     <script type='text/javascript' src='http://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='http://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
     <%= javascript_include_tag 'wechat' %>
