--- a/app/views/layouts/wechat.html.erb
+++ b/app/views/layouts/wechat.html.erb
@@ -6,6 +6,7 @@
     <title><%= wechat_title %></title>
     <%= stylesheet_link_tag 'wechat', media: 'all', 'data-turbolinks-track' => true %>
     <script src="http://cdnjs.gtimg.com/cdnjs/libs/zepto/1.1.4/zepto.min.js"></script>
+    <%= csrf_meta_tags %>
 </head>
 <body ontouchstart class="<%= controller.controller_path.gsub('/','__') + '__' + controller.action_name %>">
   <%= yield %>
