--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -1718,6 +1718,7 @@ body.sub_courses__show  {
 					overflow: hidden;
 					.list {
 						width: 60px;
+						height: 80px;
 						float: left;
 					  display: block;
 						margin: 10px 10px;
