complete admin search

--- a/app/views/admin/courses/index.html.erb
+++ b/app/views/admin/courses/index.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="col-xs-3 pull-right">
       <div class="form-group">
-        <%= render partial: 'admin/common/keyword', locals: {path: ""} %>
+        <%= render partial: 'admin/common/keyword', locals: {path: admin_courses_path} %>
       </div>
     </div>
   </div>
