--- a/app/views/admin/common/_keyword.html.erb
+++ b/app/views/admin/common/_keyword.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag path, method: :get do %>
   <div class="input-group">
-  	<%= text_field_tag :keyword, params[:keyword], placeholder: '课程编号，名称．．．', class: 'form-control'%>
+  	<%= text_field_tag :keyword, params[:keyword], placeholder: '编号，名称．．．', class: 'form-control'%>
   	<span class="input-group-btn">
   		<button class="btn btn-success" type="submit">
   		  <span class="glyphicon glyphicon-search"></span>
