--- a/app/views/admin/managers/edit.html.erb
+++ b/app/views/admin/managers/edit.html.erb
@@ -3,7 +3,7 @@
     <a href="<%= admin_root_path%>">后台</a>
   </li>
   <li>
-    <a href="<%= admin_managers_path%>">专业列表</a>
+    <a href="<%= admin_managers_path%>">管理人员</a>
   </li>
   <li>
     <a href="<%= admin_manager_path(@manager)%>"><%= @manager.email %></a>
