--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="navbar-fixed" align="center">
   <div class="footer-content text-center">
-    <p>关于我们 | 联系我们</p>
+    <p><%= link_to "关于我们", "http://www.buoyantec.com/abouts/company", target: "blank" %> | <%= link_to "联系我们", "http://www.buoyantec.com/abouts/job", target: "blank" %></p>
     <p>Copyright©2015 大唐邦彦（上海）信息技术有限公司</p>
   </div>
 </footer>
