--- a/app/views/courses/course_collect.js.erb
+++ b/app/views/courses/course_collect.js.erb
@@ -6,12 +6,12 @@ if(collect == "collect"){
 	$("#collectFont").attr("count",new_count);
 	$("#collectFont").text(new_count);
 	$("#collectIcon").addClass("text-muted");
-	alert("已取消收藏");
+	// alert("已取消收藏");
 }else{
 	$("#collectFont").attr("iscollect","true");
 	new_count = parseInt($("#collectFont").attr("count")) + 1;
 	$("#collectFont").attr("count",new_count);
 	$("#collectFont").text(new_count);
 	$("#collectIcon").removeClass("text-muted");
-	alert("收藏成功");
+	// alert("收藏成功");
 }
