--- a/app/views/teachers/import_question.html.erb
+++ b/app/views/teachers/import_question.html.erb
@@ -34,6 +34,9 @@
 			          <span class="glyphicon glyphicon-floppy-open">导入EXCEL试题</span>
 			        </button>
 			      </div>
+			     	<div class="col-sm-2">
+			        <%= link_to "导入模板下载", "/excels/试卷导入模板.xls", class: "btn btn-primary" %>
+			      </div>
 			    </div>
 			  </div>
 			<% end %>
