--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -41,6 +41,9 @@
             <span class="glyphicon glyphicon-floppy-save">导入EXCEL试题</span>
           </button>
         </div>
+        <div class="col-sm-2">
+          <%= link_to "导入模板下载", "/excels/试卷导入模板.xls", class: "btn btn-primary" %>
+        </div>
       </div>
     </div>
   <% end %>
