--- a/app/views/courses/course_praise.js.erb
+++ b/app/views/courses/course_praise.js.erb
@@ -6,13 +6,13 @@ if(praise == "praise"){
 	$("#praiseFont").attr("count",new_count);
 	$("#praiseFont").text(new_count);
 	$("#praiseIcon").addClass("text-muted");
-	alert("已取消赞");
+	// alert("已取消赞");
 }else{
 	$("#praiseFont").attr("ispraise","true");
 	new_count = parseInt($("#praiseFont").attr("count")) + 1;
 	$("#praiseFont").attr("count",new_count);
 	$("#praiseFont").text(new_count + "个赞");
 	$("#praiseIcon").removeClass("text-muted");
-	alert("已赞");
+	// alert("已赞");
 }
 
