--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -45,6 +45,7 @@
         <div class="collect-zan-btns">
           <%= form_tag course_collect_courses_path, method: :post, remote: true, id: "courseCollectPraise" do %>
             <%= hidden_field_tag "course_id", @course.id%>
+
             <button id="courseCollectBtn" type="button" class="btn btn-default">
               <% collect_count = @course.get_likes(vote_scope: :collect).size %>
               <% is_collect = current_user.present? && (current_user.voted_up_on? @course,vote_scope: :collect) %>
@@ -54,6 +55,7 @@
                 <%= collect_count %>
               </span>
             </button>
+
             <button id="coursePraiseBtn" type="button" class="btn btn-default">
               <% praise_count = @course.get_likes(vote_scope: :praise).size %>
               <% is_praise = current_user.present? && (current_user.voted_up_on? @course,vote_scope: :praise) %>
@@ -63,6 +65,7 @@
                 <%= praise_count %>
               </span>
             </button>
+
           <% end %>
         </div>
       <% end %>
@@ -83,11 +86,12 @@
           <p class="title">教学团队</p>
           <div class="teachers">
             <% @teacher_courses.each do |teacher_course|%>
-              <div class="teacher-info">
-                 <%= link_to image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_60)), show_teachers_path(teacher_course.try(:teacher).try(:number)) if teacher_course.try(:teacher).try(:image).present? %>
-                 <% name = teacher_course.try(:teacher).try(:name) %>
-                 <p><%= name if name.present? %></p>
-              </div>
+              <% if teacher_course.teacher_id.present? %>
+                <div class="teacher-info">
+                   <%= link_to image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_60)), show_teachers_path(teacher_course.try(:teacher).try(:number)) if teacher_course.try(:teacher).try(:image).present? %>
+                   <p><%= teacher_course.try(:teacher).try(:name) %></p>
+                </div>
+              <% end %>
             <% end %>
           </div>
         </li>
